...
            iconView.centerYAnchor.constraint(equalTo: centerYAnchor),
            widthAnchor.constraint(equalToConstant: Self.size),
            heightAnchor.constraint(equalToConstant: Self.size),
        ])

        setAccessibilityRole(.button)
        setAccessibilityLabel(String(localized: "Attach image or file"))
        toolTip = String(localized: "Attach Image or File")
    }

    @available(*, unavailable)
    required init?(coder: NSCoder) { fatalError("init(coder:) not supported") }

...
